<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Pengaturan</string>
    <string name="app_name">Login Form</string>
    <string name="belum_punya">Buat Pengguna Baru!</string>
    <string name="buat_sandi">Buat Sandi Baru</string>
    <string name="daftar">Daftar</string>
    <string name="konfirmasi">Konfirmasi Sandi Anda</string>
    <string name="masuk">Masuk</string>
    <string name="nama_anda">Nama</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="sandi">Sandi</string>
    <string name="todo">ToDo App</string>
    <string name="error">Terjadi Kesalahan</string>
    <string name="error_pengguna">Nama Pengguna/Sandi Salah</string>
    <string name="batal">Batal</string>
    <string name="sukses">Sukses</string>
</resources>