<!--
  ~ Copyright (c) 2015 APRIJAL PASARIBU.
  -->

<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_anda"/>
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNamaDaftar"
        android:inputType="textCapWords" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_pengguna"/>
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNamaPenggunaDaftar"
        android:inputType="text" />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buat_sandi"/>
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSandiDaftar"
        android:inputType="textWebPassword" />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/konfirmasi"/>
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSandiUlangDaftar"
        android:inputType="textWebPassword" />
    <Button
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDaftar"
        android:background="@drawable/tombol"
        android:text="@string/daftar"/>
</LinearLayout>