<!--
  ~ Copyright (c) 2015 APRIJAL PASARIBU.
  -->

<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_pengguna"/>
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNamaPenggunaMasuk"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sandi"/>
    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSandiMasuk"
        android:inputType="textWebPassword" />
    <Button
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMasuk"
        android:background="@drawable/tombol"
        android:text="@string/masuk"/>
    <TextView
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/daftar"
        android:text="@string/belum_punya"
        android:textSize="17sp"
        android:textStyle="italic" />
</LinearLayout>